# banana-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: CI.yaml
apps/: CMakeLists.txt
apps/livecam/: CMakeLists.txt  main.cpp
apps/static-image/: CMakeLists.txt  main.cpp
docs/: banana-center-line-fitting.ipynb
include/banana-lib/: lib.hpp
include/polyfit/: Polynomial2DFit.hpp
resources/: README.md  reference-contours.yml
src/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt  banana-lib-test.cpp  example-test.cpp  polyfit-test-util.hpp  polyfit-test.cpp
